--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-	"name": "duccio/apns-php",
+	"name": "valentinlazy/apns-php",
 	"type": "library",
 	"description": "Apple Push Notification & Feedback Provider",
 	"keywords": ["APNS", "apple", "push", "notification"],
-	"homepage": "https://github.com/duccio/ApnsPHP",
+	"homepage": "https://github.com/Valentinlazy/ApnsPHP",
 	"license": "BSD-3-Clause",
 	"require": {
 		"php": ">=5.3.0",
